[Update] solve z-index

--- a/src/style/components/menuButton.scss
+++ b/src/style/components/menuButton.scss
@@ -1,4 +1,5 @@
 .menu {
+  position: fixed;
   --color: #000;
   width: 36px;
   height: 36px;
